<resources>
    <string name="app_name">d\'movie</string>
    <string name="txt_ob1">you can find your favorite movie easily here</string>
    <string name="txt_skip">SKIP</string>
    <string name="txt_next">NEXT</string>
    <string name="txt_ob2">Find out what your favorite film is about, how the story goes, how it is ranked</string>
    <string name="txt_start">START</string>
    <string name="txt_image_view">image view</string>
    <string name="txt_login">Login</string>
    <string name="txt_please_login">Please Login To Continue</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="Login">Login</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_don_t_have_an_account">Dont Have An Account?</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_create_account">Create Account</string>
    <string name="txt_please_fill_the_input_below_here">Please fill the input below here</string>
    <string name="txt_back">Back</string>
    <string name="txt_fullname">Fullname</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_already_have_an_account">Already have an account?</string>
    <string name="txt_image_button">Image Button</string>
    <string name="txt_forget_password">Forgot Password</string>
    <string name="txt_send">SEND</string>
    <string name="txt_9_feb_2021">9/Feb/2021</string>
    <string name="txt_top_3_popular_movies_this_week">Top 3 Popular Movies This Week</string>
    <string name="txt_highlight">Light Up The Sky</string>
    <string name="txt_rd_hl1">October 14, 2020</string>
    <string name="txt_highlight2">Attack On Titan S4</string>
    <string name="txt_rd_hl2">April 7, 2013</string>
    <string name="txt_highlight3"><![CDATA[Pride & Prejudice]]></string>
    <string name="txt_rd_hl3">January 28, 1813</string>
    <string name="txt_all">All</string>
    <string name="txt_drama">Drama</string>
    <string name="txt_comedy">Comedy</string>
    <string name="txt_thriller">Thriller</string>
    <string name="txt_horror">Horror</string>
    <string name="dummy_release_date">"December 25, 2020 "</string>
    <string name="dummy_genre">Family/Comedy</string>
    <string name="tv_title_item">Soul</string>
    <string name="tv_dummy_desc_mov">A jazz musician, stuck in a mediocre job, finally gets his big break. However, when a wrong step takes him to the Great Before, he tries to help an infant soul in order to return to reality.</string>
    <string name="txt_dummy_rate">8.1</string>
    <string name="txt_na_jaemin">Na Jaemin</string>
    <string name="txt_jaemin_email">najaem0813@gmail.com</string>
    <string name="txt_preference">Preference</string>
    <string name="txt_dark_mode">Dark Mode</string>
    <string name="txt_notification">Notification</string>
    <string name="txt_account">Account</string>
    <string name="txt_edit_account">Edit Account</string>
    <string name="txt_change_account">Change Account</string>
    <string name="txt_language">Language</string>
    <string name="txt_bookmark">Bookmark</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_privacy_and_setting_help"><![CDATA[Privacy & Setting Help]]></string>
    <string name="txt_log_out">Log Out</string>
    <string name="error_text">Not Empty</string>
    <string name="error_pass">Password Mismatch</string>
    <string name="text_user">Users</string>
    <string name="error_regis">Register Failed</string>
    <string name="txt_dummy_title_detail"><![CDATA[Pride & Prejudice]]></string>
    <string name="txt_release_date">Release Date</string>
    <string name="txt_dummy_rd_detail">December 25, 2020</string>
    <string name="txt_rating">Rating</string>
    <string name="txt_dummy_rate_detail">8.1</string>
    <string name="txt_synopsis">Synopsis</string>
    <string name="txt_dummy_synopsis_detail">In this adaptation of Jane Austen\'s beloved novel, Elizabeth Bennet (Keira Knightley) lives with her mother, father and sisters in the English countryside. As the eldest, she faces mounting pressure from her parents to marry. When the outspoken Elizabeth is introduced to the handsome and upper-class Mr. Darcy (Matthew MacFadyen), sparks fly. Although there is obvious chemistry between the two, Darcy\'s overly reserved nature threatens the fledgling relationship.</string>
    <string name="txt_dummy_genre_detail">Romance/Drama</string>
    <string name="txt_Genre">Genre</string>
    <string name="txt_floating_button">floating button</string>

</resources>