<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ib_arrow_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPass">

    <ImageView
        android:id="@+id/iv_forgot_pass_illus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/forgotpass"
        android:contentDescription="@string/txt_image_view" />

    <ImageButton
        android:id="@+id/ib_back_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back"
        android:contentDescription="@string/txt_image_button" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_forget_password"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_forgot_pass_illus" />

    <TextView
        android:id="@+id/tv_sub_title_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_please_fill_the_input_below_here"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forget_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email_forgot_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:boxBackgroundColor="@color/trans_grey"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopEnd="@dimen/_16dp"
        app:boxCornerRadiusTopStart="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_title_forgot"
        app:startIconDrawable="@drawable/mail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/trans_grey"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:background="@drawable/background_button_circle"
        android:text="@string/txt_send"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_forgot_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>